# Customer-Support-RAG-Agent

./: README.md
cutomer-support-agent/: README.md  main.py  pyproject.toml  requirements.txt
cutomer-support-agent/n8n/: automation.json
cutomer-support-agent/src/api/: main.py
cutomer-support-agent/src/config/: settings.py
cutomer-support-agent/src/ingestion/: load_pdf.py
cutomer-support-agent/src/rag/: query.py
cutomer-support-agent/vectorstore/chroma/: chroma.sqlite3
